Add `Þ Hub` page `API` sub-page to docs (#1237)
* Fix typo

* Fix typo

* Add standalone Hub & API docs pages

* Change title

* Update 1_api.mdx

* Update 1_api.mdx

* Update link

* rename file

* add example usage of blocks API

* Update 1_api.mdx

---------

Co-authored-by: Ciaran Morinan <c@hash.ai>

--- a/apps/site/src/_pages/docs/0_index.mdx
+++ b/apps/site/src/_pages/docs/0_index.mdx
@@ -8,7 +8,7 @@ Block developers can build blocks that work in any application, without knowing 
 
 Likewise, applications can make their interfaces infinitely extensible without any special knowledge of the blocks that people might develop.
 
-In one sense, you can think of the Block Protocol as a plugin framework **for the whole web**. Þ blocks are supported in a number of environments today, including the world's most-used content management system,[WordPress](https://blockprotocol.org/docs/blocks/environments#wordpress).
+In one sense, you can think of the Block Protocol as a plugin framework **for the whole web**. Þ blocks are supported in a number of environments today, including the world's most-used content management system, [WordPress](https://blockprotocol.org/docs/blocks/environments#wordpress).
 
 ## Getting started
 
@@ -28,13 +28,8 @@ We additionally explain core concepts in the Block Protocol, including:
 
 If you have any questions, [please open or contribute to a discussion](https://github.com/blockprotocol/blockprotocol/discussions) on GitHub, or [chat to us on Discord](https://blockprotocol.org/discord).
 
-## Þ Hub & API
+## Þ Hub
 
-[Blocks](https://blockprotocol.org/docs/blocks) and [types](https://blockprotocol.org/docs/types) can be published and discovered on the [Þ Hub](https://blockprotocol.org/hub), an open-source registry that anybody can use. There are two ways to access it:
-
-1.  **in-browser** by navigating to [`blockprotocol.org/hub`](https://blockprotocol.org/hub): no account is required to browse and test blocks
-1.  **programmatically** from within other applications: either a user or an embedding application can create a free API key in order to query blocks from the Þ Hub via its API
-
-The Þ Hub exists because interoperability without discoverability is of limited use.\*\* The Þ Hub provides a single persistent, reliable, and open-source point of reference for the discovery of new Þ-compatible content. Creators only need to publish once, while embedding applications can easily discover new blocks, types and services, making them instantly available to their own users.
+Anybody can publish [blocks](https://blockprotocol.org/docs/blocks) or [types](https://blockprotocol.org/docs/types) to the [Þ Hub](https://blockprotocol.org/docs/hub).
 
 In addition to blocks and types, we intend to list currently supported [services](https://blockprotocol.org/docs/services) on the Þ Hub soon, and will support directly self-listing new services at a later date.
