--- a/apps/site/src/_pages/docs/1_blocks/02_develop.mdx
+++ b/apps/site/src/_pages/docs/1_blocks/02_develop.mdx
@@ -406,7 +406,7 @@ This will produce a compiled version of your code in the `dist` folder, along wi
 It is worth updating the `blockprotocol` object in `package.json` to include your own `icon`, and `image` for your block.
 These will automatically be included in the `block-metadata.json` produced after running `yarn build` or `npm run build`.
 
-In addition to the above, updating the `example-graph` (either `./src/example-graph.ts` or `./example-graph.json` depending on approach) is a great way to help users understand how to use your block, and how it functions. Many environments (such as the [Þ Hub]) will insert this data when users are viewing blocks.
+In addition to the above, updating the `example-graph` (either `./src/example-graph.ts` or `./example-graph.json` depending on approach) is a great way to help users understand how to use your block, and how it functions. Many environments (such as the [Þ Hub](https://blockprotocol.org/hub)) will insert this data when users are viewing blocks.
 
 You now have a block package that you can provide to apps to use, by **publishing it on the Hub**.
 
@@ -442,7 +442,7 @@ field in your `package.json` points to a public repository containing your code,
 
 Read more about verification in [the FAQ](https://blockprotocol.org/docs/faq#how-does-block-verification-work).
 
-### Improving your block's appearance on the [Þ Hub]
+### Improving your block's appearance on the [Þ Hub](https://blockprotocol.org/hub)
 
 - **To update the preview image**: take a screenshot of your block in action and replace `public/block-preview.png`
 - **To modify the description:** update the `description` in package.json
