--- a/apps/site/src/_pages/docs/1_blocks/02_develop.mdx
+++ b/apps/site/src/_pages/docs/1_blocks/02_develop.mdx
@@ -448,5 +448,5 @@ Read more about verification in [the FAQ](https://blockprotocol.org/docs/faq#how
 - **To modify the description:** update the `description` in package.json
 - **To change the icon:** add an icon to the `public` folder and update `blockprotocol.icon` in `package.json`
 - add a preview `image` to the `public` folder and update `blockprotocol.image` in `package.json`
-- update your block’s `README.md` – it will appear below your block on its hub page if you change it from the default
-- update the `example-graph` (either `./src/example-graph.ts` or `./example-graph.json` depending on approach) to update the data the block has available to it when a user loads it on the hub
+- update your block’s `README.md` – it will appear below your block on its Hub page if you change it from the default
+- update the `example-graph` (either `./src/example-graph.ts` or `./example-graph.json` depending on approach) to update the data the block has available to it when a user loads it on the Hub
