--- a/apps/site/src/_pages/docs/5_spec/01_core.mdx
+++ b/apps/site/src/_pages/docs/5_spec/01_core.mdx
@@ -38,7 +38,7 @@ At a minimum, blocks consist of:
 
 We refer to the collection of files defining a block as a **block package.**
 
-A block package might be made available via a URL, package manager (e.g. [npm](https://www.npmjs.com/)), or block catalog (e.g. [the Hub](https://blockprotocol.org/hub)).
+A block package might be made available via a URL, package manager (e.g. [npm](https://www.npmjs.com/)), or block catalog (e.g. the [Þ Hub](https://blockprotocol.org/hub)).
 
 #### <Hidden>Block package </Hidden>Specification
 
