Add type system link to types page

--- a/apps/site/src/_pages/docs/2_types.mdx
+++ b/apps/site/src/_pages/docs/2_types.mdx
@@ -14,7 +14,7 @@ The system by which types are defined is known as the 'type system'.
 
 ## The type system
 
-The Block Protocol type system is designed so that types are composed of re-usable, sharable parts, which can be
+The Block Protocol's [type system](https://blockprotocol.org/docs/spec/graph#the-type-system) is designed so that types are composed of re-usable, sharable parts, which can be
 referenced by other users and by other types.
 
 The type system consists of three classes of elements:
