--- a/apps/site/src/_pages/legal/privacy/1_private-information-removal.mdx
+++ b/apps/site/src/_pages/legal/privacy/1_private-information-removal.mdx
@@ -31,7 +31,7 @@ For the purposes of this document, “private information” refers to content t
 #### Private information removal requests are _not_ appropriate for
 
 - **Internal server names, IP addresses, and URLs, on their own.** You must be able to show that their use in a particular file or piece of code poses a security threat. The [National Institute of Standards and Technology](https://en.wikipedia.org/wiki/National_Institute_of_Standards_and_Technology) explicitly advises against relying on "security through obscurity".
-- **Mere mentions of your company's identity, name, brand, domain name, or other references to your company in files on the Block Protocol.** You must be able to articulate why a use of your company's identity is a threat to your company's security posture. See the [Block Protcool Impersonation Policy](/legal/acceptable-use/impersonation) and [HASH Trademark Complaints Policy](https://hash.ai/legal/trademark-complaints) for more information.
+- **Mere mentions of your company's identity, name, brand, domain name, or other references to your company in files on the Block Protocol.** You must be able to articulate why a use of your company's identity is a threat to your company's security posture. See the [Block Protocol Impersonation Policy](/legal/acceptable-use/impersonation) and [HASH Trademark Complaints Policy](https://hash.ai/legal/trademark-complaints) for more information.
 - **Entire files or projects** that do not pose a specific security risk, but you believe are otherwise objectionable.
 - **Requests to remove content that may infringe your or your organization's copyright rights.** If you have questions about how the Block Protocol handles copyright-related matters or would like to report potentially infringing content, please review the [HASH Copyright Materials (DMCA) Policy](https://hash.ai/legal/copyright) which governs the Block Protocol website, in addition to all other HASH websites. The private information removal process is generally _not intended_ for the removal of full files or repositories — only for the specific pieces of private information in those files. While there may be cases where files are filled entirely with private information, you must justify the security risk for the removal of such files, and this may increase the time required to process your request.
 - **Trademark disputes.** If you have questions about how the Block Protocol handles trademark-related matters or would like to report content containing your organization's trade or service marks, please review the [HASH Trademark Complaints Policy](https://hash.ai/legal/trademark-complaints).
