--- a/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
@@ -18,7 +18,7 @@ topics:
 
 The parties agree that this Block Protocol Data Protection Agreement (“DPA”) sets forth their obligations with respect to the processing and security of Personal Data and, where explicitly stated in the DPA Terms, Customer Data in connection with the Online Services provided by _HASH, Inc._ ("the Block Protocol" and "Block Protocol").
 
-The DPA (including its Appendix and Attachments) is between the Block Protocol and any customer receiving Online Services from the Block Protcool based on the Block Protocol Customer Agreement (“Customer”), and is incorporated by reference into the Block Protocol Customer Agreement.
+The DPA (including its Appendix and Attachments) is between the Block Protocol and any customer receiving Online Services from the Block Protocol based on the Block Protocol Customer Agreement (“Customer”), and is incorporated by reference into the Block Protocol Customer Agreement.
 
 In the event of any conflict or inconsistency between the DPA Terms and any other terms in the Block Protocol Customer Agreement, the DPA Terms will prevail. The provisions of the DPA Terms supersede any conflicting provisions of the Block Protocol Privacy Statement that otherwise may apply to processing of Personal Data. For clarity, the Standard Contractual Clauses prevail over any other term of the DPA Terms.
 
