--- a/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
@@ -55,7 +55,7 @@ Capitalized terms used but not defined in this DPA will have the meanings provid
 - “**DPA Terms**” means both the terms in this DPA and any Online Service-specific terms in the Block Protocol Customer Agreement that specifically supplement or modify the privacy and security terms in this DPA for a specific Online Service (or feature of an Online Service). In the event of any conflict or inconsistency between the DPA and such Online Service-specific terms, the Online Service-specific terms shall prevail as to the applicable Online Service (or feature of that Online Service).
 - “**GDPR**” means Regulation (EU) 2016/679 of the European Parliament and of the Council of 27 April 2016 on the protection of natural persons with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (General Data Protection Regulation). In connection with the United Kingdom, “GDPR” means Regulation (EU) 2016/679 astransposed into national law of the United Kingdom by the UK European Union (Withdrawal) Act 2018 and amended by the UK Data Protection, Privacy and Electronic Communications (Amendments etc.) (EU Exit) Regulations 2019 (as may be amended from time to time).
 - “**Local EU/EEA Data Protection Laws**” means any subordinate legislation and regulation implementing the GDPR.
-- “**GDPR Related Terms**” means the terms in [Attachment 3](#attachment-3), under which the Block Protocol makes binding commitments regarding its processing of Personal Data as required by Article 28 of the GDPR.
+- “**GDPR Related Terms**” means the terms in [Attachment 3](/legal/terms/dpa/attachment-3.pdf), under which the Block Protocol makes binding commitments regarding its processing of Personal Data as required by Article 28 of the GDPR.
 - “**Block Protocol Affiliate**” means any entity that directly or indirectly controls, is controlled by or is under common control with the Block Protocol.
 - “**Block Protocol Customer Agreement**” means the service or other agreement(s) entered into by Customer with the Block Protocol for Online Services.
 - “**Block Protocol Privacy Statement**” means the Block Protocol privacy statement available at [blockprotocol.org/legal/privacy](https://blockprotocol.org/legal/privacy)
@@ -65,8 +65,8 @@ Capitalized terms used but not defined in this DPA will have the meanings provid
 - “**Professional Services Data**” means all data, including all text, sound, video, image files or software, that are provided to the Block Protocol, by or on behalf of a Customer (or that Customer authorizes the Block Protocol to obtain from an Online Service) or otherwise obtained or processed by or on behalf of the Block Protocol through an engagement with the Block Protocol to obtain Professional Services. Professional Services Data includes Support Data.
 - “**Service Generated Data**” means data generated or derived by the Block Protocol through the operation of an Online Service. Service Generated Data does not include Customer Data, Diagnostic Data, or Professional Services Data.
 - “**Standard Contractual Clauses**” means either of the following sets of Standard Contractual Clauses, as applicable in the individual case to the transfer of personal data according to the section of this DPA entitled “Data Transfers and Location” below:
-  - the Standard Contractual Clauses (MODULE TWO: Transfer controller to processor), dated 4 June 2021, for the transfer of personal data to third countries pursuant to Regulation (EU) 2016/679 of the European Parliament and of the Council, as described in Article 46 of the GDPR and approved by European Commission Implementing Decision (EU) 2021/91 (“**Standard Contractual Clauses (EU/EEA)**”) and adopted by the Switzerland Federal Data Protection and Information Commissioner (“Swiss FDPIC”). The Standard Contractual Clauses (EU/EEA) are set forth in [Attachment 1](#attachment-1).
-  - the International Data Transfer Addendum to the Standard Contractual Clauses (EU/EEA) as adopted by the United Kingdom Information Commissioner’s Office (“UK ICO”) for use in connection with data transfers from the United Kingdom (“**Standard Contractual Clauses (UK)**”). The Standard Contractual Clauses (UK) are set forth in [Attachment 2]](#attachment-2).
+  - the Standard Contractual Clauses (MODULE TWO: Transfer controller to processor), dated 4 June 2021, for the transfer of personal data to third countries pursuant to Regulation (EU) 2016/679 of the European Parliament and of the Council, as described in Article 46 of the GDPR and approved by European Commission Implementing Decision (EU) 2021/91 (“**Standard Contractual Clauses (EU/EEA)**”) and adopted by the Switzerland Federal Data Protection and Information Commissioner (“Swiss FDPIC”). The Standard Contractual Clauses (EU/EEA) are set forth in [Attachment 1](/legal/terms/dpa/attachment-1.pdf).
+  - the International Data Transfer Addendum to the Standard Contractual Clauses (EU/EEA) as adopted by the United Kingdom Information Commissioner’s Office (“UK ICO”) for use in connection with data transfers from the United Kingdom (“**Standard Contractual Clauses (UK)**”). The Standard Contractual Clauses (UK) are set forth in [Attachment 2](/legal/terms/dpa/attachment-2.pdf).
 - “**Sub-processor**” means other processors used by the Block Protocol to process Personal Data on behalf of Customer in connection with the Online Services, as described in Article 28 of the GDPR.
 - “**Support Data**” means all data, including all text, sound, video, image files, or software, that are provided to the Block Protocol by or on behalf of Customer (or that Customer authorizes the Block Protocol to obtain from an Online Service) through an engagement with the Block Protocol to obtain technical support for Online Services covered under this agreement. Support Data is a subset of Professional Services Data.
 
@@ -159,7 +159,7 @@ In support of the above, the Block Protocol may provide Customer’s basic conta
 
 All Personal Data processed by the Block Protocol in connection with the Online Services is obtained as part of either Customer Data, Professional Services Data (including Support Data), Diagnostic Data, or Service Generated Data. Personal Data provided to the Block Protocol by, or on behalf of, Customer through use of the Online Service is also Customer Data. Pseudonymized identifiers may be included in Diagnostic Data or Service Generated Data and are also Personal Data. Any Personal Data pseudonymized, or de-identified but not anonymized, or Personal Data derived from Personal Data is also Personal Data.
 
-To the extent the Block Protocol is a processor or sub-processor of Personal Data subject to the GDPR, the GDPR Related Terms in [Attachment 3](#attachment-3) govern that processing and the parties also agree to the following terms in this sub-section (“Processing of Personal Data; GDPR”):
+To the extent the Block Protocol is a processor or sub-processor of Personal Data subject to the GDPR, the GDPR Related Terms in [Attachment 3](/legal/terms/dpa/attachment-3.pdf) govern that processing and the parties also agree to the following terms in this sub-section (“Processing of Personal Data; GDPR”):
 
 #### Processor and Controller Roles and Responsibilities
 
@@ -169,7 +169,7 @@ Any additional or alternate instructions must be agreed to according to
 the process for amending Customer’s Block Protocol Customer Agreement. In any instance where the GDPR applies and Customer is a processor, Customer
 warrants to the Block Protocol that Customer’s instructions, including appointment of the Block Protocol as a processor or sub-processor, have been authorized by the relevant controller.
 
-To the extent the Block Protocol uses or otherwise processes Personal Data subject to the GDPR for the Block Protocol’s legitimate business operations incident to delivery of the Online Services to Customer, the Block Protocol will comply with the obligations of an independent data controller under GDPR for such use. The Block Protocol is accepting the added responsibilities of a data “controller” under the GDPR for processing in connection with its legitimate business operations to: (a) act consistent with regulatory requirements, to the extent required under the GDPR; and (b) provide increased transparency to Customers and confirm the Block Protocol’s accountability for such processing. The Block Protocol employs safeguards to protect Personal Data in processing, including those identified in this DPA and those contemplated in Article 6(4) of the GDPR. With respect to processing of Personal Data under this paragraph, the Block Protocol makes the commitments set forth in the Standard Contractual Clauses set forth in [Attachment 1](#attachment-1) or [Attachment 2](#attachment-2) (as applicable); for those purposes, (i) any Block Protocol disclosure of Personal Data, as described in Annex IV to [Attachment 1](#attachment-1), that has been transferred in connection with the Block Protocol’s legitimate business operations is deemed a “Relevant Disclosure” and (ii) the commitments in Annex IV to [Attachment 1](#attachment-1) apply to such Personal Data.
+To the extent the Block Protocol uses or otherwise processes Personal Data subject to the GDPR for the Block Protocol’s legitimate business operations incident to delivery of the Online Services to Customer, the Block Protocol will comply with the obligations of an independent data controller under GDPR for such use. The Block Protocol is accepting the added responsibilities of a data “controller” under the GDPR for processing in connection with its legitimate business operations to: (a) act consistent with regulatory requirements, to the extent required under the GDPR; and (b) provide increased transparency to Customers and confirm the Block Protocol’s accountability for such processing. The Block Protocol employs safeguards to protect Personal Data in processing, including those identified in this DPA and those contemplated in Article 6(4) of the GDPR. With respect to processing of Personal Data under this paragraph, the Block Protocol makes the commitments set forth in the Standard Contractual Clauses set forth in [Attachment 1](/legal/terms/dpa/attachment-1.pdf) or [Attachment 2](/legal/terms/dpa/attachment-2.pdf) (as applicable); for those purposes, (i) any Block Protocol disclosure of Personal Data, as described in Annex IV to [Attachment 1](/legal/terms/dpa/attachment-1.pdf), that has been transferred in connection with the Block Protocol’s legitimate business operations is deemed a “Relevant Disclosure” and (ii) the commitments in Annex IV to [Attachment 1](/legal/terms/dpa/attachment-1.pdf) apply to such Personal Data.
 
 #### Processing Details
 
@@ -178,8 +178,8 @@ The parties acknowledge and agree that:
 - **Subject Matter.** The subject-matter of the processing is limited to Personal Data within the scope of the section of this DPA entitled “Nature of Data Processing; Ownership” above and the GDPR.
 - **Duration of the Processing.** The duration of the processing shall be in accordance with Customer instructions and the terms of the DPA.
 - **Nature and Purpose of the Processing.** The nature and purpose of the processing shall be to provide the Online Service pursuant to Customer’s Block Protocol Customer Agreement and for the Block Protocol's legitimate business operations incident to delivery of the Online Service to Customer (as further described in the section of this DPA entitled “Nature of Data Processing; Ownership” above).
-- **Categories of Data.** The types of Personal Data processed by the Block Protocol when providing the Online Service include: (i) Personal Data that Customer elects to include in Customer Data or Professional Services Data (including, without limitation, Support Data); and (ii) those expressly identified in Article 4 of the GDPR that may be contained in Diagnostic Data or Service Generated Data. The types of Personal Data that Customer elects to include in Customer Data or Professional Services Data (including, without limitation, Support Data) may be any categories of Personal Data identified in records maintained by Customer acting as controller pursuant to Article 30 of the GDPR, including the categories of Personal Data set forth in Annex I to [Attachment 1](#attachment-1).
-- **Data Subjects.** The categories of data subjects are Customer’s representatives and end users, such as employees, contractors, collaborators, and customers, and may include any other categories of data subjects as identified in records maintained by Customer acting as controller pursuant to Article 30 of the GDPR, including the categories of data subjects set forth in Annex I to [Attachment 1](#attachment-1).
+- **Categories of Data.** The types of Personal Data processed by the Block Protocol when providing the Online Service include: (i) Personal Data that Customer elects to include in Customer Data or Professional Services Data (including, without limitation, Support Data); and (ii) those expressly identified in Article 4 of the GDPR that may be contained in Diagnostic Data or Service Generated Data. The types of Personal Data that Customer elects to include in Customer Data or Professional Services Data (including, without limitation, Support Data) may be any categories of Personal Data identified in records maintained by Customer acting as controller pursuant to Article 30 of the GDPR, including the categories of Personal Data set forth in Annex I to [Attachment 1](/legal/terms/dpa/attachment-1.pdf).
+- **Data Subjects.** The categories of data subjects are Customer’s representatives and end users, such as employees, contractors, collaborators, and customers, and may include any other categories of data subjects as identified in records maintained by Customer acting as controller pursuant to Article 30 of the GDPR, including the categories of data subjects set forth in Annex I to [Attachment 1](/legal/terms/dpa/attachment-1.pdf).
 
 #### Data Subject Rights; Assistance with Requests
 
@@ -221,7 +221,7 @@ Customer must notify the Block Protocol promptly about any possible misuse of it
 
 Personal Data that the Block Protocol processes on behalf and in accordance with the documented instructions of Customer in connection with the Online Services may not be transferred to, or stored and processed in a geographic location except in accordance with the DPA Terms and the safeguards provided below in this section. Taking into account such safeguards, Customer appoints the Block Protocol to transfer Personal Data to the United States or any other country in which the Block Protocol or its Sub-processors operate and to store and process Personal Data to provide the Online Services, except as may be described elsewhere in these DPA Terms.
 
-All transfers of Personal Data out of the European Union, European Economic Area, or Switzerland to provide the Online Services shall be governed by the Standard Contractual Clauses(EU/EEA) in [Attachment 1](#attachment-1). All transfers of Personal Data out of the United Kingdom to provide the Online Services shall be governed by the Standard Contractual Clauses (UK) in [Attachment 2](#attachment-2). For the purposes of the Data Protection Law of Switzerland, Standard Contractual Clauses (EU/EEA) in [Attachment 1](#attachment-1), shall be interpreted as follows:
+All transfers of Personal Data out of the European Union, European Economic Area, or Switzerland to provide the Online Services shall be governed by the Standard Contractual Clauses(EU/EEA) in [Attachment 1](/legal/terms/dpa/attachment-1.pdf). All transfers of Personal Data out of the United Kingdom to provide the Online Services shall be governed by the Standard Contractual Clauses (UK) in [Attachment 2](/legal/terms/dpa/attachment-2.pdf). For the purposes of the Data Protection Law of Switzerland, Standard Contractual Clauses (EU/EEA) in [Attachment 1](/legal/terms/dpa/attachment-1.pdf), shall be interpreted as follows:
 
 > i. references to the “European Union,” “EU,” “European Economic Area,” “EEA” or a “Member State” shall be interpreted to refer to
 > “Switzerland”
@@ -319,12 +319,12 @@ The Block Protocol has implemented and will maintain for Customer Data and Perso
 
 ## Attachment 1
 
-**The Standard Contractual Clauses (EU/EEA) Controller to Processor** located at [blockprotocol.org/legal/terms/dpa/attachment-1](/legal/terms/dpa/attachment-1)
+**The Standard Contractual Clauses (EU/EEA) Controller to Processor** located at [blockprotocol.org/legal/terms/dpa/attachment-1](/legal/terms/dpa/attachment-1.pdf)
 
 ## Attachment 2
 
-**International Data Transfer Addendum to the EU Commission Standard Contractual Clauses** located at [blockprotocol.org/legal/terms/dpa/attachment-2](/legal/terms/dpa/attachment-2)
+**International Data Transfer Addendum to the EU Commission Standard Contractual Clauses** located at [blockprotocol.org/legal/terms/dpa/attachment-2](/legal/terms/dpa/attachment-2.pdf)
 
 ## Attachment 3
 
-**European Union General Data Protection Regulation Terms** located at [blockprotocol.org/legal/terms/dpa/attachment-3](/legal/terms/dpa/attachment-3)
+**European Union General Data Protection Regulation Terms** located at [blockprotocol.org/legal/terms/dpa/attachment-3](/legal/terms/dpa/attachment-3.pdf)
