--- a/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
@@ -55,7 +55,7 @@ Capitalized terms used but not defined in this DPA will have the meanings provid
 - “**DPA Terms**” means both the terms in this DPA and any Online Service-specific terms in the Block Protocol Customer Agreement that specifically supplement or modify the privacy and security terms in this DPA for a specific Online Service (or feature of an Online Service). In the event of any conflict or inconsistency between the DPA and such Online Service-specific terms, the Online Service-specific terms shall prevail as to the applicable Online Service (or feature of that Online Service).
 - “**GDPR**” means Regulation (EU) 2016/679 of the European Parliament and of the Council of 27 April 2016 on the protection of natural persons with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (General Data Protection Regulation). In connection with the United Kingdom, “GDPR” means Regulation (EU) 2016/679 astransposed into national law of the United Kingdom by the UK European Union (Withdrawal) Act 2018 and amended by the UK Data Protection, Privacy and Electronic Communications (Amendments etc.) (EU Exit) Regulations 2019 (as may be amended from time to time).
 - “**Local EU/EEA Data Protection Laws**” means any subordinate legislation and regulation implementing the GDPR.
-- “**GDPR Related Terms**” means the terms in [Attachment 3](/legal/terms/dpa/attachment-3.pdf), under which the Block Protocol makes binding commitments regarding its processing of Personal Data as required by Article 28 of the GDPR.
+- “**GDPR Related Terms**” means the terms in [Attachment 3](#attachment-3), under which the Block Protocol makes binding commitments regarding its processing of Personal Data as required by Article 28 of the GDPR.
 - “**Block Protocol Affiliate**” means any entity that directly or indirectly controls, is controlled by or is under common control with the Block Protocol.
 - “**Block Protocol Customer Agreement**” means the service or other agreement(s) entered into by Customer with the Block Protocol for Online Services.
 - “**Block Protocol Privacy Statement**” means the Block Protocol privacy statement available at [blockprotocol.org/legal/privacy](https://blockprotocol.org/legal/privacy)
