--- a/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
@@ -178,8 +178,8 @@ The parties acknowledge and agree that:
 - **Subject Matter.** The subject-matter of the processing is limited to Personal Data within the scope of the section of this DPA entitled “Nature of Data Processing; Ownership” above and the GDPR.
 - **Duration of the Processing.** The duration of the processing shall be in accordance with Customer instructions and the terms of the DPA.
 - **Nature and Purpose of the Processing.** The nature and purpose of the processing shall be to provide the Online Service pursuant to Customer’s Block Protocol Customer Agreement and for the Block Protocol's legitimate business operations incident to delivery of the Online Service to Customer (as further described in the section of this DPA entitled “Nature of Data Processing; Ownership” above).
-- **Categories of Data.** The types of Personal Data processed by the Block Protocol when providing the Online Service include: (i) Personal Data that Customer elects to include in Customer Data or Professional Services Data (including, without limitation, Support Data); and (ii) those expressly identified in Article 4 of the GDPR that may be contained in Diagnostic Data or Service Generated Data. The types of Personal Data that Customer elects to include in Customer Data or Professional Services Data (including, without limitation, Support Data) may be any categories of Personal Data identified in records maintained by Customer acting as controller pursuant to Article 30 of the GDPR, including the categories of Personal Data set forth in Annex I to [Attachment 1](/legal/terms/dpa/attachment-1.pdf).
-- **Data Subjects.** The categories of data subjects are Customer’s representatives and end users, such as employees, contractors, collaborators, and customers, and may include any other categories of data subjects as identified in records maintained by Customer acting as controller pursuant to Article 30 of the GDPR, including the categories of data subjects set forth in Annex I to [Attachment 1](/legal/terms/dpa/attachment-1.pdf).
+- **Categories of Data.** The types of Personal Data processed by the Block Protocol when providing the Online Service include: (i) Personal Data that Customer elects to include in Customer Data or Professional Services Data (including, without limitation, Support Data); and (ii) those expressly identified in Article 4 of the GDPR that may be contained in Diagnostic Data or Service Generated Data. The types of Personal Data that Customer elects to include in Customer Data or Professional Services Data (including, without limitation, Support Data) may be any categories of Personal Data identified in records maintained by Customer acting as controller pursuant to Article 30 of the GDPR, including the categories of Personal Data set forth in Annex I to [Attachment 1](#attachment-1).
+- **Data Subjects.** The categories of data subjects are Customer’s representatives and end users, such as employees, contractors, collaborators, and customers, and may include any other categories of data subjects as identified in records maintained by Customer acting as controller pursuant to Article 30 of the GDPR, including the categories of data subjects set forth in Annex I to [Attachment 1](#attachment-1).
 
 #### Data Subject Rights; Assistance with Requests
 
