--- a/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
@@ -159,7 +159,7 @@ In support of the above, the Block Protocol may provide Customer’s basic conta
 
 All Personal Data processed by the Block Protocol in connection with the Online Services is obtained as part of either Customer Data, Professional Services Data (including Support Data), Diagnostic Data, or Service Generated Data. Personal Data provided to the Block Protocol by, or on behalf of, Customer through use of the Online Service is also Customer Data. Pseudonymized identifiers may be included in Diagnostic Data or Service Generated Data and are also Personal Data. Any Personal Data pseudonymized, or de-identified but not anonymized, or Personal Data derived from Personal Data is also Personal Data.
 
-To the extent the Block Protocol is a processor or sub-processor of Personal Data subject to the GDPR, the GDPR Related Terms in [Attachment 3](/legal/terms/dpa/attachment-3.pdf) govern that processing and the parties also agree to the following terms in this sub-section (“Processing of Personal Data; GDPR”):
+To the extent the Block Protocol is a processor or sub-processor of Personal Data subject to the GDPR, the GDPR Related Terms in [Attachment 3](#attachment-3) govern that processing and the parties also agree to the following terms in this sub-section (“Processing of Personal Data; GDPR”):
 
 #### Processor and Controller Roles and Responsibilities
 
