--- a/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
@@ -221,7 +221,7 @@ Customer must notify the Block Protocol promptly about any possible misuse of it
 
 Personal Data that the Block Protocol processes on behalf and in accordance with the documented instructions of Customer in connection with the Online Services may not be transferred to, or stored and processed in a geographic location except in accordance with the DPA Terms and the safeguards provided below in this section. Taking into account such safeguards, Customer appoints the Block Protocol to transfer Personal Data to the United States or any other country in which the Block Protocol or its Sub-processors operate and to store and process Personal Data to provide the Online Services, except as may be described elsewhere in these DPA Terms.
 
-All transfers of Personal Data out of the European Union, European Economic Area, or Switzerland to provide the Online Services shall be governed by the Standard Contractual Clauses(EU/EEA) in [Attachment 1](/legal/terms/dpa/attachment-1.pdf). All transfers of Personal Data out of the United Kingdom to provide the Online Services shall be governed by the Standard Contractual Clauses (UK) in [Attachment 2](/legal/terms/dpa/attachment-2.pdf). For the purposes of the Data Protection Law of Switzerland, Standard Contractual Clauses (EU/EEA) in [Attachment 1](/legal/terms/dpa/attachment-1.pdf), shall be interpreted as follows:
+All transfers of Personal Data out of the European Union, European Economic Area, or Switzerland to provide the Online Services shall be governed by the Standard Contractual Clauses(EU/EEA) in [Attachment 1](#attachment-1). All transfers of Personal Data out of the United Kingdom to provide the Online Services shall be governed by the Standard Contractual Clauses (UK) in [Attachment 2](#attachment-2). For the purposes of the Data Protection Law of Switzerland, Standard Contractual Clauses (EU/EEA) in [Attachment 1](#attachment-1), shall be interpreted as follows:
 
 > i. references to the “European Union,” “EU,” “European Economic Area,” “EEA” or a “Member State” shall be interpreted to refer to
 > “Switzerland”
