--- a/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
@@ -319,7 +319,7 @@ The Block Protocol has implemented and will maintain for Customer Data and Perso
 
 ## Attachment 1
 
-**The Standard Contractual Clauses (EU/EEA) Controller to Processor** located at [blockprotocol.org/legal/terms/dpa/attachment-1](/legal/terms/dpa/attachment-1.pdf)
+**The Standard Contractual Clauses (EU/EEA) Controller to Processor** located at [blockprotocol.org/legal/terms/dpa/attachment-1.pdf](/legal/terms/dpa/attachment-1.pdf)
 
 ## Attachment 2
 
