--- a/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
@@ -323,7 +323,7 @@ The Block Protocol has implemented and will maintain for Customer Data and Perso
 
 ## Attachment 2
 
-**International Data Transfer Addendum to the EU Commission Standard Contractual Clauses** located at [blockprotocol.org/legal/terms/dpa/attachment-2](/legal/terms/dpa/attachment-2.pdf)
+**International Data Transfer Addendum to the EU Commission Standard Contractual Clauses** located at [blockprotocol.org/legal/terms/dpa/attachment-2.pdf](/legal/terms/dpa/attachment-2.pdf)
 
 ## Attachment 3
 
