--- a/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
@@ -327,4 +327,4 @@ The Block Protocol has implemented and will maintain for Customer Data and Perso
 
 ## Attachment 3
 
-**European Union General Data Protection Regulation Terms** located at [blockprotocol.org/legal/terms/dpa/attachment-3](/legal/terms/dpa/attachment-3.pdf)
+**European Union General Data Protection Regulation Terms** located at [blockprotocol.org/legal/terms/dpa/attachment-3.pdf](/legal/terms/dpa/attachment-3.pdf)
