Fix broken link

--- a/apps/site/src/_pages/legal/privacy/00_index.mdx
+++ b/apps/site/src/_pages/legal/privacy/00_index.mdx
@@ -48,7 +48,7 @@ We use your personal information as this Privacy Statement describes. No matter 
 
 The data controller of your personal data is _HASH, Inc._ For individuals outside North America, the data controller is _HASH, Ltd._
 
-This privacy statement does not apply to personal data we process as a service provider or data processor on behalf of our enterprise customers. Our data processing activities as service provider or data processor is governed by our [Data Protection Agreement](/legal/terms/data-protection-agreement). If you are an end-user of one of those organizations, such as an employee or student, you should read that organization’s privacy statement and direct any privacy inquiries to that organization.
+This privacy statement does not apply to personal data we process as a service provider or data processor on behalf of our enterprise customers. Our data processing activities as service provider or data processor is governed by our [Data Protection Agreement](/legal/terms/dpa). If you are an end-user of one of those organizations, such as an employee or student, you should read that organization’s privacy statement and direct any privacy inquiries to that organization.
 
 ### Block Protocol acting on your behalf
 
