Update links following handling change

--- a/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/dpa/00_index.mdx
@@ -319,12 +319,12 @@ The Block Protocol has implemented and will maintain for Customer Data and Perso
 
 ## Attachment 1
 
-**The Standard Contractual Clauses (EU/EEA) Controller to Processor** located at [blockprotocol.org/legal/terms/dpa/attachment-1.pdf](/legal/terms/dpa/attachment-1.pdf)
+**The Standard Contractual Clauses (EU/EEA) Controller to Processor** located at [blockprotocol.org/legal/terms/dpa/attachment-1](/legal/terms/dpa/attachment-1)
 
 ## Attachment 2
 
-**International Data Transfer Addendum to the EU Commission Standard Contractual Clauses** located at [blockprotocol.org/legal/terms/dpa/attachment-2.pdf](/legal/terms/dpa/attachment-2.pdf)
+**International Data Transfer Addendum to the EU Commission Standard Contractual Clauses** located at [blockprotocol.org/legal/terms/dpa/attachment-2](/legal/terms/dpa/attachment-2)
 
 ## Attachment 3
 
-**European Union General Data Protection Regulation Terms** located at [blockprotocol.org/legal/terms/dpa/attachment-3.pdf](/legal/terms/dpa/attachment-3.pdf)
+**European Union General Data Protection Regulation Terms** located at [blockprotocol.org/legal/terms/dpa/attachment-3](/legal/terms/dpa/attachment-3)
